--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <description>paicoding-forum</description>
     <properties>
         <java.version>1.8</java.version>
+        <knife4j.version>4.0.0</knife4j.version>
     </properties>
 
     <dependencyManagement>
@@ -49,6 +50,12 @@
                 <groupId>com.paicoding</groupId>
                 <artifactId>paicoding-ui</artifactId>
                 <version>0.0.1-SNAPSHOT</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
+                <version>${knife4j.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
