--- a/paicoding-web/pom.xml
+++ b/paicoding-web/pom.xml
@@ -18,6 +18,21 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.paicoding</groupId>
+            <artifactId>paicoding-ui</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.paicoding</groupId>
+            <artifactId>paicoding-service</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.paicoding</groupId>
+            <artifactId>paicoding-api</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
@@ -25,6 +40,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
