--- a/paicoding-service/pom.xml
+++ b/paicoding-service/pom.xml
@@ -16,4 +16,21 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.paicoding</groupId>
+            <artifactId>paicoding-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.paicoding</groupId>
+            <artifactId>paicoding-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
