--- a/paicoding-api/pom.xml
+++ b/paicoding-api/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
