--- a/paicoding-web/src/main/resources-env/dev/application-dal.yml
+++ b/paicoding-web/src/main/resources-env/dev/application-dal.yml
@@ -3,3 +3,7 @@ spring:
     url: jdbc:mysql://localhost:3306/${database.name}?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
     password: 123456
+  redis:
+    host: localhost
+    port: 6379
+    password: 123456
